Class detail styling
• Added styling to class details
• Same for faculty but will probably change it
• Hyperlinks to go from classes to their details
• Generated a bunch of random faces to use as teachers
• Added website I used to generate faces to the list in contact

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <script defer src="./scripts/script.js"></script>
-    <link rel="icon" type="image/png" href="pictures/icon.png">
+    <link rel="icon" type="image/png" href="images/icon.png">
     <script src="./scripts/home.js"></script>
 </head>
 
@@ -23,7 +23,7 @@
     <div id="home_background"></div>
     <div id=title_div>
         <h1 id="title">ΦΡΟΝΤΙΣΤΗΡΙΑ ΚΟΡΥΦΗ</h1>
-        <img src="./pictures/icon.png" alt="Εικονίδιο φροντιστηρίου" id="title_icon">
+        <img src="./images/icon.png" alt="Εικονίδιο φροντιστηρίου" id="title_icon">
     </div>
 
     <div id=intro_div>
