--- a/original_index.html
+++ b/original_index.html
@@ -14,18 +14,18 @@
         rel="stylesheet">
 
     <script defer src="./scripts/script.js"></script>
-    <link rel="icon" type="image/png" href="pictures/icon.png">
+    <link rel="icon" type="image/png" href="images/icon.png">
 
 </head>
 
 <body>
     <iframe src="pages/navbar.html" class="navbar" id="navbar_iframe"></iframe>
 
-    <img src="pictures/name_banner1.jpg" width="100%" height="auto" alt="Φροντιστήρια Κορυφή">
+    <img src="images/name_banner1.jpg" width="100%" height="auto" alt="Φροντιστήρια Κορυφή">
     <div class="banner">
         <div class="banner-images">
-            <img src="pictures/banner_pic_1_students.jpg" alt="Students">
-            <img src="pictures/banner_pic_2_students.jpg" alt="Students">
+            <img src="images/banner_pic_1_students.jpg" alt="Students">
+            <img src="images/banner_pic_2_students.jpg" alt="Students">
         </div>
     </div>
 
