--- a/pages/classes.html
+++ b/pages/classes.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
-    <link rel="icon" type="image/png" href="../pictures/icon.png">
+    <link rel="icon" type="image/png" href="../images/icon.png">
 
 </head>
 
@@ -30,7 +30,7 @@
                         <a>Διδάσκων: Μιχαήλ Γιαννόπουλος</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Ανάλυση Ι</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#arithmitiki_analisi" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                         <a>Έτος: 3ο</a>
                         <a>Διδάσκων: Ελένη Ζήνωνα</a>
                         <a>Διάρκεια: 15 ώρες</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#stohastiki" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <a>Διδάσκων: Ξανθή Συριοπούλου</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Γεωμετρία Ι</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#analitiki_geometria" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                         <a>Διδάσκων: Παναγιώτης Δημάκος</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Θεωρία Παιγνίων</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#ypologistiki" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                         <a>Έτος: 1ο, 2ο</a>
                         <a>Διδάσκων: Σπυρίδων Κότρας</a>
                         <a>Διάρκεια: 35 ώρες</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#statistiki" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -101,12 +101,12 @@
                 <h2 class="classes_styling">Χρηματοοικονομικά</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/valitsa.jpg">
+                        <img src="../images/valitsa.jpg">
                         <a>Επίπεδο: 1ο</a>
                         <a>Διδάσκων: Ιωάννης Παλαιός</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Κεφάλαιο Αγοράς</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#xrimatoiokonomika" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -116,12 +116,12 @@
                 <h2 class="classes_styling">Τραπεζική Λογιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/coins.jpg">
+                        <img src="../images/coins.jpg">
                         <a>Επίπεδο: 4ο</a>
                         <a>Διδάσκων: Φωτεινή Καπλάνη</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Λογιστικά</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#trapezeziki_logistiki" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -133,12 +133,12 @@
                 <h2 class="classes_styling">Διεθνής Οικονομική </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/cards.jpg">
+                        <img src="../images/cards.jpg">
                         <a>Έτος: 2ο</a>
                         <a>Διδάσκων: Χριστίνα Μπέλλου</a>
                         <a>Διάρκεια: 25 ώρες</a>
                         <a>Προαπαιτούμενα: Εγχώριο Εμπόριο</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#diethnis_oikonomiki" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -148,12 +148,12 @@
                 <h2 class="classes_styling">Οικονομετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/calculator.jpg">
+                        <img src="../images/calculator.jpg">
                         <a>Έτος: 2ο,3ο</a>
                         <a>Διδάσκων: Στέφανος Πούρος</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Μαθηματικά Ι</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#oikonometria" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -163,10 +163,10 @@
                 <h2 class="classes_styling">Οικονομικό Δίκαιο </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/trapeza.jpg">
+                        <img src="../images/trapeza.jpg">
                         <a>Έτος: 4ο</a>
                         <a>Διδάσκων: Θανάσης Στυλιανός</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#oikonomiko_dikaio" class="read_more">Μάθετε περισσότερα</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Μακροοικονομική</a>
                     </div>
@@ -179,10 +179,10 @@
                 </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/banknotes.jpg">
+                        <img src="../images/banknotes.jpg">
                         <a>Έτος: 1ο</a>
                         <a>Διδάσκων: Αλέξανδρος Ευαγγελής</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#egxoria_oikonomiki" class="read_more">Μάθετε περισσότερα</a>
                         <a>Διάρκεια: 20 ώρες</a>
                     </div>
                 </div>
@@ -195,12 +195,12 @@
                 <h2 class="classes_styling">Φυσιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/brain.jpg">
+                        <img src="../images/brain.jpg">
                         <a>Έτος: 1ο,2ο</a>
                         <a>Διδάσκων: Ελευθερία Ράμψη</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Θεραπευτική</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#fisiologia" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -210,13 +210,13 @@
                 <h2 class="classes_styling">Μοριακή Βιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/moriakhbiologia.jpg">
+                        <img src="../images/moriakhbiologia.jpg">
                         <a>Έτος: 4ο</a>
                         <a>Διδάσκων: Κατερίνα Μάργκου</a>
                         <a>Διάρκεια: 40 ώρες</a>
                         <a>Προαπαιτούμενα: Βιοχημεία</a>
 
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#moriaki_biologia" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -226,12 +226,12 @@
                 <h2 class="classes_styling">Γενετική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/genetics.jpg">
+                        <img src="../images/genetics.jpg">
                         <a>Έτος: 3ο</a>
                         <a>Διδάσκων: Ειρήνη Μαυροπούλου</a>
                         <a>Διάρκεια: 40 ώρες</a>
                         <a>Προαπαιτούμενα: Γονιδιακή Ι</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#genetiki" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -241,11 +241,11 @@
                 <h2 class="classes_styling">Αναλυτική Χημεία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/analytikhxhmeia.jpg">
+                        <img src="../images/analytikhxhmeia.jpg">
                         <a>Έτος: 1ο,2ο</a>
                         <a>Διδάσκων: Κοσμάς Καλύβης</a>
                         <a>Διάρκεια: 30 ώρες</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#analitiki_ximeia" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -255,12 +255,12 @@
                 <h2 class="classes_styling">Μικροβιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/microbiology.jpg">
+                        <img src="../images/microbiology.jpg">
                         <a>Έτος: 2ο</a>
                         <a>Διδάσκων: Κωνσταντίνος Μπάρας</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Επιδημιολογία Ι</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#mikrobiologia" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
@@ -270,19 +270,17 @@
                 <h2 class="classes_styling">Εξελικτική Βιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../pictures/evolutional_book.jpg">
+                        <img src="../images/evolutional_book.jpg">
                         <a>Έτος: 3ο</a>
                         <a>Διδάσκων: Χρήστος Αντωνιάδης</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Ζωολογία</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a href="./class_details.html#exeliktiki_biologia" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
     <iframe src="./footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
 
