--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
-    <link rel="icon" type="image/png" href="../pictures/icon.png">
+    <link rel="icon" type="image/png" href="../images/icon.png">
 
 
 </head>
@@ -36,8 +36,8 @@
         <br>
         <a href="https://pixabay.com/">Pixabay</a> <br>
         <a href="https://www.freevector.com/hand-drawn-mathematics-element-vectors-25214">Free Vector</a> <Br>
-        <a href="https://www.freepik.com/"> Freepik</a>
-
+        <a href="https://www.freepik.com/">Freepik</a><br>
+        <a href="https://this-person-does-not-exist.com/">Random Face Generator</a>
 
         <p>Συνεργάστηκαν οι:</p>
 
