--- a/pages/koinothta.html
+++ b/pages/koinothta.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
     <script defer src="../scripts/script_enlarge_pics.js"></script>
-    <link rel="icon" type="image/png" href="../pictures/icon.png">
+    <link rel="icon" type="image/png" href="../images/icon.png">
 
 </head>
 
@@ -409,14 +409,14 @@
             εμπνέουν.
         </p>
 
-        <img src="../pictures/party1_sign.png" width="20%" height="auto" alt="Click to enlarge"
+        <img src="../images/party1_sign.png" width="20%" height="auto" alt="Click to enlarge"
             class="open-img cropped-img" id="open-img1" style="cursor: pointer;">
 
-        <img src="../pictures/party2_people.png" width="20%" height="auto" alt="Click to enlarge"
+        <img src="../images/party2_people.png" width="20%" height="auto" alt="Click to enlarge"
             class="open-img cropped-img" id=" open-img2" style="cursor: pointer;">
 
 
-        <img src="../pictures/party3_table.png" width="20%" height="auto" alt="Click to enlarge"
+        <img src="../images/party3_table.png" width="20%" height="auto" alt="Click to enlarge"
             class="open-img cropped-img" id="open-img3" style="cursor: pointer;">
 
 
