--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -7,44 +7,123 @@
     <title> Ανθρώπινο Δυναμικό | Φροντιστήρια Κορυφή</title>
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
-    <link rel="icon" type="image/png" href="../pictures/icon.png">
+    <link rel="icon" type="image/png" href="../images/icon.png">
 
 
 </head>
 
 <body>
-
-
     <iframe src="./navbar.html" class="navbar" id="navbar_iframe"></iframe>
-    <img id="faculty-img" src="../pictures/students_faculty.jpg"> </img>
 
-    <div id="faculty-text">
-        <h3 id="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία <br> ______________________________</h3>
+    <div class="parallax"></div>
 
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
         <p>
             Στη Κορυφή, η συνεχής και άρτια εκπαίδευση του προσωπικού είναι βασική προτεραιότητα. Αυτή η συνεχής
             επιμόρφωση
-            είναι απαραίτητη για να προσαρμόζονται γρήγορα και αποτελεσματικά στις συνεχείς εξελίξεις του εκπαιδευτικού
+            είναι απαραίτητη για να προσαρμόζονται γρήγορα και αποτελεσματικά στις συνεχείς εξελίξεις του
+            εκπαιδευτικού
             τοπίου.
         </p>
-
-
         <p>Το προσωπικό της Κορυφής ξεχωρίζει για:</p>
+        <ul>
+            <li>
+                Το υψηλό επίπεδο επιστημονικής κατάρτισης, το οποίο συνεχώς αναβαθμίζεται και επεκτείνεται.
+            </li>
+            <br>
+            <li>
+                Την αρμονική συνεργασία μεταξύ εκπαιδευτικών διαφορετικών ηλικιακών ομάδων, που συνδυάζει την
+                εμπειρία
+                των
+                παλαιοτέρων με το πάθος των νεότερων για τη διδασκαλία.
+            </li>
+            <br>
+            <li>
+                Τη φιλοσοφία της συνεργασίας, που εκφράζεται μέσα από τη λειτουργία των καινοτόμων και ιδιαίτερα
+                αποτελεσματικών
+                Διδακτικών Ομάδων.
+                Αυτά τα χαρακτηριστικά του ανθρώπινου δυναμικού της Κορυφής συμβάλλουν στη δημιουργία ενός
+                περιβάλλοντος
+                αμοιβαίας εμπιστοσύνης και άριστης επικοινωνίας μεταξύ διδασκόντων και μαθητών.
+            </li>
+        </ul>
+    </div>
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (1).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Κύριος Γιάννης</p>
+                <p>Χρόνια Διδασκαλίας: 15</p>
+                <p>Σπουδή: Βιοτεχνολογία</p>
+            </div>
 
+        </div>
         <p>
-            &#x2022; Το υψηλό επίπεδο επιστημονικής κατάρτισης, το οποίο συνεχώς αναβαθμίζεται και επεκτείνεται.
+            Στη Κορυφή, η συνεχής και άρτια εκπαίδευση του προσωπικού είναι βασική προτεραιότητα. Αυτή η συνεχής
+            επιμόρφωση
+            είναι απαραίτητη για να προσαρμόζονται γρήγορα και αποτελεσματικά στις συνεχείς εξελίξεις του
+            εκπαιδευτικού
+            τοπίου.
         </p>
-
-        <p> &#x2022; Την αρμονική συνεργασία μεταξύ εκπαιδευτικών διαφορετικών ηλικιακών ομάδων, που συνδυάζει την
-            εμπειρία
-            των
-            παλαιοτέρων με το πάθος των νεότερων για τη διδασκαλία.</p>
-        <p> &#x2022; Τη φιλοσοφία της συνεργασίας, που εκφράζεται μέσα από τη λειτουργία των καινοτόμων και ιδιαίτερα
-            αποτελεσματικών
-            Διδακτικών Ομάδων.
-            Αυτά τα χαρακτηριστικά του ανθρώπινου δυναμικού της Κορυφής συμβάλλουν στη δημιουργία ενός περιβάλλοντος
-            αμοιβαίας εμπιστοσύνης και άριστης επικοινωνίας μεταξύ διδασκόντων και μαθητών.</p>
-
+        <p>Το προσωπικό της Κορυφής ξεχωρίζει για:</p>
+        <ul>
+            <li>
+                Το υψηλό επίπεδο επιστημονικής κατάρτισης, το οποίο συνεχώς αναβαθμίζεται και επεκτείνεται.
+            </li>
+            <br>
+            <li>
+                Την αρμονική συνεργασία μεταξύ εκπαιδευτικών διαφορετικών ηλικιακών ομάδων, που συνδυάζει την
+                εμπειρία
+                των
+                παλαιοτέρων με το πάθος των νεότερων για τη διδασκαλία.
+            </li>
+            <br>
+            <li>
+                Τη φιλοσοφία της συνεργασίας, που εκφράζεται μέσα από τη λειτουργία των καινοτόμων και ιδιαίτερα
+                αποτελεσματικών
+                Διδακτικών Ομάδων.
+                Αυτά τα χαρακτηριστικά του ανθρώπινου δυναμικού της Κορυφής συμβάλλουν στη δημιουργία ενός
+                περιβάλλοντος
+                αμοιβαίας εμπιστοσύνης και άριστης επικοινωνίας μεταξύ διδασκόντων και μαθητών.
+            </li>
+        </ul>
+    </div>
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <p>
+            Στη Κορυφή, η συνεχής και άρτια εκπαίδευση του προσωπικού είναι βασική προτεραιότητα. Αυτή η συνεχής
+            επιμόρφωση
+            είναι απαραίτητη για να προσαρμόζονται γρήγορα και αποτελεσματικά στις συνεχείς εξελίξεις του
+            εκπαιδευτικού
+            τοπίου.
+        </p>
+        <p>Το προσωπικό της Κορυφής ξεχωρίζει για:</p>
+        <ul>
+            <li>
+                Το υψηλό επίπεδο επιστημονικής κατάρτισης, το οποίο συνεχώς αναβαθμίζεται και επεκτείνεται.
+            </li>
+            <br>
+            <li>
+                Την αρμονική συνεργασία μεταξύ εκπαιδευτικών διαφορετικών ηλικιακών ομάδων, που συνδυάζει την
+                εμπειρία
+                των
+                παλαιοτέρων με το πάθος των νεότερων για τη διδασκαλία.
+            </li>
+            <br>
+            <li>
+                Τη φιλοσοφία της συνεργασίας, που εκφράζεται μέσα από τη λειτουργία των καινοτόμων και ιδιαίτερα
+                αποτελεσματικών
+                Διδακτικών Ομάδων.
+                Αυτά τα χαρακτηριστικά του ανθρώπινου δυναμικού της Κορυφής συμβάλλουν στη δημιουργία ενός
+                περιβάλλοντος
+                αμοιβαίας εμπιστοσύνης και άριστης επικοινωνίας μεταξύ διδασκόντων και μαθητών.
+            </li>
+        </ul>
     </div>
 
 
