--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -25,5 +25,8 @@
         <button class="button" onclick="window.parent.location.href='./contact.html'">
             <p>Επικοινωνία</p>
         </button>
+        <button class="button" onclick="window.parent.location.href='./quiz.html'">
+            <p>Quiz</p>
+        </button>
     </nav>
 </body>
