--- a/index.html
+++ b/index.html
@@ -61,10 +61,21 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="home_popup">
+        <button id="popup_button">x</button>
+        <div id="home_popup_contents">
+            <a id="time"></a>
+            <a id="welcome_text"></a>
+            <p>Καλωσορίσατε στο Φροντιστήριο Κορυφή!</p>
+            <p>
+                Εξερευνήστε τα μαθήματα μας, το προσωπικό και την θερμή κοινότητα
+                μας!
+            </p>
+        </div>
+
 
     </div>
-
-
     <div id="progress_bar"></div>
 
 
