--- a/index.html
+++ b/index.html
@@ -30,34 +30,43 @@
         <div class=intro_card_row>
             <div class=intro_card_shadow>
                 <div class=intro_card>
-                    <a>Best in class</a>
-                    <a>90% success rate</a>
+                    <a><span class="first-letter-style">Γ</span> λώσσα</a> <br>
+                    <a>Γιατί στην Κορυφή, η γλώσσα δεν είναι εργαλείο επικοινωνίας και θεμέλιος λίθος της
+                        μάθησης, δίαυλος πληροφορίας και ιδεών.
+                    </a>
                 </div>
             </div>
             <div class=intro_card_shadow>
                 <div class=intro_card>
-                    <a>Best in class</a>
-                    <a>90% success rate</a>
+                    <a><span class="first-letter-style">Ν</span> ους</a> <br>
+                    <a>Επειδή εκγυμνάζουμε ανελλιπώς τον νου, ώστε να φτάνει στο απόγειο της δημιουργικής
+                        σκέψης, κλειδί για την ακαδημαϊκή αριστεία.
+                    </a>
                 </div>
             </div>
             <div class=intro_card_shadow>
                 <div class=intro_card>
-                    <a>Best in class</a>
-                    <a>90% success rate</a>
+                    <a><span class="first-letter-style">Ω</span> θηση</a> <br>
+                    <a> Γιατί ωθούμε διαρκώς τους φοιτητές να εργάζονται σκληρά και να ξεπερνούν τον εαυτό τους,
+                        στηρίζοντας κάθε τους βήμα.
+                    </a>
                 </div>
             </div>
         </div>
         <div class=intro_card_row>
             <div class=intro_card_shadow>
                 <div class=intro_card>
-                    <a>Best in class</a>
-                    <a>90% success rate</a>
+                    <a><span class="first-letter-style">Σ</span> σκοπός</a> <br>
+                    <a> Επειδή στην Κορυφή, φοιτητές και καθηγητές έχουν ως κινητήριο δύναμη τον σκοπό για το άριστο.
+                    </a>
                 </div>
             </div>
             <div class=intro_card_shadow>
                 <div class=intro_card>
-                    <a>Best in class</a>
-                    <a>90% success rate</a>
+                    <a><span class="first-letter-style">Η</span> θος</a> <br>
+                    <a> Γιατί οι καθηγητές μας αποτελούν πρότυπα επαγγελματιών, και εργάζονται με μεράκι για τη μόρφωση
+                        των φοιτητών
+                    </a>
                 </div>
             </div>
         </div>
@@ -69,7 +78,7 @@
             <a id="welcome_text"></a>
             <p>Καλωσορίσατε στο Φροντιστήριο Κορυφή!</p>
             <p>
-                Εξερευνήστε τα μαθήματα μας, το προσωπικό και την θερμή κοινότητα
+                Εξερευνήστε τα μαθήματα μας, το προσωπικό και την θερμή κοινότητά
                 μας!
             </p>
         </div>
@@ -77,8 +86,6 @@
 
     </div>
     <div id="progress_bar"></div>
-
-
 
 </body>
 
