--- a/pages/classes.html
+++ b/pages/classes.html
@@ -71,7 +71,7 @@
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
                         <a>Έτος: 2ο</a>
-                        <a>Διδάσκων: Παναγιώτης Δημάκος</a>
+                        <a>Διδάσκων: Παναγιώτα Δημάκου</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Θεωρία Παιγνίων</a>
                         <a href="./class_details.html#ypologistiki" class="read_more">Μάθετε περισσότερα</a>
@@ -103,7 +103,7 @@
                     <div class="lesson_img">
                         <img src="../images/valitsa.jpg">
                         <a>Επίπεδο: 1ο</a>
-                        <a>Διδάσκων: Ιωάννης Παλαιός</a>
+                        <a>Διδάσκων: Ιωάννα Παλαιού</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Κεφάλαιο Αγοράς</a>
                         <a href="./class_details.html#xrimatoiokonomika" class="read_more">Μάθετε περισσότερα</a>
