--- a/pages/class_details.html
+++ b/pages/class_details.html
@@ -22,7 +22,7 @@
         <h3 class="lesson-description-head">Αριθμητική Ανάλυση</h3>
         <hr>
         <p>
-            Το μάθημα "Αριθμητική Ανάλυση" εστιάζει στις μεθόδους επίλυσης μαθηματικών προβλημάτων με τη χρήση
+            Το μάθημα εστιάζει στις μεθόδους επίλυσης μαθηματικών προβλημάτων με τη χρήση
             αριθμητικών τεχνικών και υπολογιστών. Οι φοιτητές θα εξοικειωθούν με θεμελιώδεις έννοιες, όπως η γραμμική
             παρεμβολή, οι μέθοδοι επίλυσης μη γραμμικών εξισώσεων, η αριθμητική ολοκλήρωση και διαφοροποίηση, καθώς και
             η επίλυση διαφορικών εξισώσεων. Το μάθημα περιλαμβάνει θεωρητική διδασκαλία για την κατανόηση των μεθόδων,
@@ -35,7 +35,7 @@
         <h3 class="lesson-description-head">Στοχαστική</h3>
         <hr>
         <p>
-            Το μάθημα "Στοχαστική" επικεντρώνεται στις μεθόδους μοντελοποίησης τυχαίων φαινομένων και διαδικασιών. Οι
+            Η Στοχαστική επικεντρώνεται στις μεθόδους μοντελοποίησης τυχαίων φαινομένων και διαδικασιών. Οι
             φοιτητές μαθαίνουν βασικές αρχές της θεωρίας πιθανοτήτων, στοχαστικών διαδικασιών όπως οι αλυσίδες Markov,
             και
             εφαρμογές τους σε τομείς όπως η χρηματοοικονομική ανάλυση, τα συστήματα αναμονής και η ανάλυση κινδύνου. Το
@@ -47,7 +47,7 @@
         <h3 class="lesson-description-head">Αναλυτική Γεωμετρία</h3>
         <hr>
         <p>
-            Το μάθημα "Αναλυτική Γεωμετρία" εισάγει τους φοιτητές στη μελέτη γεωμετρικών σχημάτων μέσω αλγεβρικών και
+            Το μάθημα εισάγει τους φοιτητές στη μελέτη γεωμετρικών σχημάτων μέσω αλγεβρικών και
             διανυσματικών μεθόδων. Καλύπτει έννοιες όπως ευθείες, επίπεδα, κύκλους, κώνους και σφαίρες, εστιάζοντας στις
             σχέσεις μεταξύ τους. Μέσα από τη θεωρία και ασκήσεις, οι φοιτητές μαθαίνουν να λύνουν γεωμετρικά προβλήματα
             με
@@ -59,7 +59,8 @@
         <h3 class="lesson-description-head">Υπολογιστική</h3>
         <hr>
         <p>
-            Το μάθημα "Υπολογιστική" παρέχει μια εισαγωγή στη χρήση αλγορίθμων και μαθηματικών μεθόδων για την επίλυση
+            Η Υπολογιστική, αν και πολλοί δεν το γνωρίζουν, παρέχει μια εισαγωγή στη χρήση αλγορίθμων και μαθηματικών
+            μεθόδων για την επίλυση
             σύνθετων προβλημάτων. Περιλαμβάνει θέματα όπως αλγοριθμική ανάλυση, γραμμικούς αλγόριθμους και αριθμητικές
             μεθόδους, ενώ γίνεται πρακτική εφαρμογή σε προγραμματιστικά περιβάλλοντα. Είναι ιδανικό για φοιτητές που
             ενδιαφέρονται για την εφαρμογή της πληροφορικής σε επιστημονικούς και τεχνολογικούς τομείς.
@@ -70,7 +71,7 @@
         <h3 class="lesson-description-head">Στατιστική</h3>
         <hr>
         <p>
-            Το μάθημα "Στατιστική" εξετάζει θεμελιώδεις τεχνικές συλλογής, ανάλυσης και παρουσίασης δεδομένων. Οι
+            Ο κλάδος της Στατιστικής εξετάζει θεμελιώδεις τεχνικές συλλογής, ανάλυσης και παρουσίασης δεδομένων. Οι
             φοιτητές
             μαθαίνουν να χρησιμοποιούν εργαλεία για την περιγραφική στατιστική, τη θεωρία πιθανοτήτων, την παλινδρόμηση
             και
@@ -85,8 +86,8 @@
         <h3 class="lesson-description-head">Χρηματοοικονομικά</h3>
         <hr>
         <p>
-            Το μάθημα "Χρηματοοικονομικά" παρέχει μια εισαγωγή στις βασικές αρχές της χρηματοοικονομικής διαχείρισης.
-            Εξετάζει θέματα όπως ο χρηματοοικονομικός σχεδιασμός, η διαχείριση ρίσκου, οι επενδυτικές αποφάσεις και η
+            Τα Χρηματοοικονομικά παρέχουν μια εισαγωγή στις βασικές αρχές της χρηματοοικονομικής διαχείρισης. Το μάθημα
+            εξετάζει θέματα όπως ο χρηματοοικονομικός σχεδιασμός, η διαχείριση ρίσκου, οι επενδυτικές αποφάσεις και η
             αποτίμηση περιουσιακών στοιχείων. Μέσα από παραδείγματα και μελέτες περιπτώσεων, οι φοιτητές αποκτούν
             πρακτικές
             γνώσεις χρήσιμες για την κατανόηση των χρηματαγορών και τη λήψη αποφάσεων στον χρηματοοικονομικό τομέα.
@@ -97,7 +98,7 @@
         <h3 class="lesson-description-head">Τραπεζική Λογιστική</h3>
         <hr>
         <p>
-            Το μάθημα "Τραπεζική Λογιστική" επικεντρώνεται στις λογιστικές διαδικασίες και κανονισμούς που αφορούν τον
+            Η Τραπεζική Λογιστική στρέφει το ενδιαφέρον στις λογιστικές διαδικασίες και κανονισμούς που αφορούν τον
             τραπεζικό τομέα. Καλύπτει θέματα όπως η κατάρτιση οικονομικών καταστάσεων τραπεζών, η αποτίμηση δανείων και
             χρηματοοικονομικών προϊόντων, καθώς και η συμμόρφωση με διεθνή πρότυπα. Το μάθημα προσφέρει πρακτικές
             γνώσεις
@@ -108,7 +109,7 @@
         <h3 class="lesson-description-head">Διεθνής Οικονομική</h3>
         <hr>
         <p>
-            Το μάθημα "Διεθνής Οικονομική" εξετάζει τη λειτουργία της παγκόσμιας οικονομίας και τις σχέσεις μεταξύ
+            Στο μάθημα, ο διδάσκων εξετάζει τη λειτουργία της παγκόσμιας οικονομίας και τις σχέσεις μεταξύ
             χωρών.
             Θέματα όπως το διεθνές εμπόριο, οι συναλλαγματικές ισοτιμίες, η παγκόσμια χρηματοπιστωτική αγορά και οι
             πολιτικές εμπορίου αποτελούν κεντρικό άξονα. Οι φοιτητές αποκτούν γνώσεις για την ανάλυση των οικονομικών
@@ -121,7 +122,7 @@
         <h3 class="lesson-description-head">Οικονομετρία</h3>
         <hr>
         <p>
-            Το μάθημα "Οικονομετρία" συνδυάζει τη στατιστική, τα μαθηματικά και την οικονομική θεωρία για την ανάλυση
+            Η Οικονομετρία, ως γνωστόν, συνδυάζει τη στατιστική, τα μαθηματικά και την οικονομική θεωρία για την ανάλυση
             οικονομικών δεδομένων. Οι φοιτητές μαθαίνουν να χρησιμοποιούν εργαλεία όπως η παλινδρόμηση και οι
             χρονολογικές
             σειρές για την κατανόηση και πρόβλεψη οικονομικών φαινομένων. Το μάθημα περιλαμβάνει πρακτική εφαρμογή με
@@ -135,8 +136,8 @@
         <h3 class="lesson-description-head">Οικονομικό Δίκαιο</h3>
         <hr>
         <p>
-            Το μάθημα "Οικονομικό Δίκαιο" εξετάζει το νομικό πλαίσιο που διέπει την οικονομική δραστηριότητα.
-            Περιλαμβάνει
+            Στο Οικονομικό Δίκαιο, εξετάζεται το νομικό πλαίσιο που διέπει την οικονομική δραστηριότητα.
+            Περιλαμβάνονται
             θέματα όπως οι εμπορικές συμβάσεις, η εταιρική νομοθεσία, οι κανόνες ανταγωνισμού και οι διεθνείς νομικές
             κανονιστικές διατάξεις. Οι φοιτητές αποκτούν βασικές γνώσεις για τη σύνδεση της νομικής και οικονομικής
             επιστήμης, χρήσιμες για καριέρες στον επιχειρηματικό και νομικό τομέα.
@@ -147,7 +148,7 @@
         <h3 class="lesson-description-head">Εγχώρια Οικονομική</h3>
         <hr>
         <p>
-            Το μάθημα "Εγχώρια Οικονομική" επικεντρώνεται στη μελέτη της οικονομικής δραστηριότητας σε εθνικό επίπεδο.
+            Το μάθημα επικεντρώνεται στη μελέτη της οικονομικής δραστηριότητας σε εθνικό επίπεδο.
             Θέματα όπως η δημοσιονομική πολιτική, η νομισματική πολιτική, η απασχόληση και οι εγχώριες επενδύσεις
             βρίσκονται
             στο επίκεντρο. Οι φοιτητές μαθαίνουν να αναλύουν τις οικονομικές πολιτικές και τη σχέση τους με την ανάπτυξη
@@ -160,7 +161,8 @@
         <h3 class="lesson-description-head">Φυσιολογία</h3>
         <hr>
         <p>
-            Το μάθημα "Φυσιολογία" εξετάζει τη λειτουργία των συστημάτων του ανθρώπινου σώματος. Από τη νευρική και
+            Η Φυσολογία εξετάζει ως επί το πλείστον τη λειτουργία των συστημάτων του ανθρώπινου σώματος. Από τη νευρική
+            και
             καρδιαγγειακή λειτουργία έως το πεπτικό και αναπνευστικό σύστημα, οι φοιτητές μελετούν πώς συνεργάζονται τα
             συστήματα για τη διατήρηση της υγείας. Το μάθημα συνδυάζει θεωρία και εργαστηριακές ασκήσεις, παρέχοντας
             ολοκληρωμένες γνώσεις χρήσιμες για βιολογικές και ιατρικές σπουδές.
@@ -172,7 +174,7 @@
         <h3 class="lesson-description-head">Μοριακή Βιολογία</h3>
         <hr>
         <p>
-            Το μάθημα "Μοριακή Βιολογία" εστιάζει στις μοριακές δομές και λειτουργίες των κυττάρων. Οι φοιτητές
+            ΤΣτη Μοριακή Βιολογία εξετάζουμε μοριακές δομές και λειτουργίες των κυττάρων. Οι φοιτητές
             μαθαίνουν
             για τη δομή και τη λειτουργία των DNA, RNA και πρωτεϊνών, καθώς και για τις μηχανισμούς γονιδιακής έκφρασης
             και
@@ -185,7 +187,8 @@
         <h3 class="lesson-description-head">Γενετική</h3>
         <hr>
         <p>
-            Το μάθημα "Γενετική" ασχολείται με τη μελέτη της κληρονομικότητας και των γονιδιακών μηχανισμών. Οι φοιτητές
+            Η επιστήμη της Γενετικής ασχολείται με τη μελέτη της κληρονομικότητας και των γονιδιακών μηχανισμών. Οι
+            φοιτητές
             μαθαίνουν για τη δομή και τη λειτουργία των γονιδίων, τις μεταλλάξεις, τις μεθόδους γενετικής ανάλυσης και
             τις
             εφαρμογές της γενετικής στην ιατρική και τη βιοτεχνολογία.
@@ -197,7 +200,7 @@
         <h3 class="lesson-description-head">Αναλυτική Χημεία</h3>
         <hr>
         <p>
-            Το μάθημα "Αναλυτική Χημεία" διδάσκει τις τεχνικές ανάλυσης χημικών ουσιών, από κλασικές μεθόδους έως
+            Στο μάθημα, ο διδάσκων παρουσιάζει τις τεχνικές ανάλυσης χημικών ουσιών, από κλασικές μεθόδους έως
             σύγχρονα
             όργανα. Οι φοιτητές εξοικειώνονται με την ποιοτική και ποσοτική ανάλυση, τις φασματοσκοπικές μεθόδους και τη
             χρωματογραφία. Το μάθημα περιλαμβάνει εργαστηριακή εξάσκηση, προετοιμάζοντας τους για καριέρες στη χημεία,
@@ -210,7 +213,8 @@
         <h3 class="lesson-description-head">Μικροβιολογία</h3>
         <hr>
         <p>
-            Το μάθημα "Μικροβιολογία" εξετάζει τη βιολογία μικροοργανισμών, όπως βακτήρια, ιούς και μύκητες. Οι φοιτητές
+            Το μάθημα της Μικροβιολογίας εξετάζει τη βιολογία μικροοργανισμών, όπως βακτήρια, ιούς και μύκητες. Οι
+            φοιτητές
             μαθαίνουν για τη δομή, τη λειτουργία και τη σημασία τους στη φύση, την υγεία και τη βιομηχανία. Το μάθημα
             περιλαμβάνει θεωρία και εργαστηριακή εξάσκηση, εστιάζοντας στη διάγνωση και την αντιμετώπιση μολύνσεων.
         </p>
@@ -220,7 +224,7 @@
         <h3 class="lesson-description-head">Εξελικτική Βιολογία</h3>
         <hr>
         <p>
-            Το μάθημα "Εξελικτική Βιολογία" εξετάζει τις διαδικασίες εξέλιξης των οργανισμών, από τη φυσική επιλογή έως
+            Η Εξελικτική Βιολογία εξετάζει τις διαδικασίες εξέλιξης των οργανισμών, από τη φυσική επιλογή έως
             τη
             γενετική μεταβλητότητα. Οι φοιτητές μελετούν τη βιολογική ποικιλομορφία, την εξέλιξη των ειδών και τις
             μοριακές
