--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -17,7 +17,7 @@
 
     <div class="parallax"></div>
 
-    <div class="faculty-text">
+    <div class="first-faculty-text">
         <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
         <hr>
         <p>
@@ -50,80 +50,251 @@
             </li>
         </ul>
     </div>
+
+    </div>
+
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (3).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Ξανθή Συριοπούλου</p>
+                <p>Χρόνια Διδασκαλίας: 12</p>
+                <p>Σπουδή: Μαθηματική Ανάλυση</p>
+            </div>
+
+        </div>
+    </div>
+
+
+    </div>
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (2).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Μιχαήλ Γιαννόπουλος</p>
+                <p>Χρόνια Διδασκαλίας: 11</p>
+                <p>Σπουδή: Μαθηματική Ανάλυση </p>
+            </div>
+
+        </div>
+    </div>
+
     <div class="faculty-text">
         <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (1).jpg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Κύριος Γιάννης</p>
-                <p>Χρόνια Διδασκαλίας: 15</p>
-                <p>Σπουδή: Βιοτεχνολογία</p>
+                <p>Ελένη Ζήνωνα</p>
+                <p>Χρόνια Διδασκαλίας: 6</p>
+                <p>Σπουδή: Στοχαστική</p>
             </div>
 
         </div>
-        <p>
-            Στη Κορυφή, η συνεχής και άρτια εκπαίδευση του προσωπικού είναι βασική προτεραιότητα. Αυτή η συνεχής
-            επιμόρφωση
-            είναι απαραίτητη για να προσαρμόζονται γρήγορα και αποτελεσματικά στις συνεχείς εξελίξεις του
-            εκπαιδευτικού
-            τοπίου.
-        </p>
-        <p>Το προσωπικό της Κορυφής ξεχωρίζει για:</p>
-        <ul>
-            <li>
-                Το υψηλό επίπεδο επιστημονικής κατάρτισης, το οποίο συνεχώς αναβαθμίζεται και επεκτείνεται.
-            </li>
-            <br>
-            <li>
-                Την αρμονική συνεργασία μεταξύ εκπαιδευτικών διαφορετικών ηλικιακών ομάδων, που συνδυάζει την
-                εμπειρία
-                των
-                παλαιοτέρων με το πάθος των νεότερων για τη διδασκαλία.
-            </li>
-            <br>
-            <li>
-                Τη φιλοσοφία της συνεργασίας, που εκφράζεται μέσα από τη λειτουργία των καινοτόμων και ιδιαίτερα
-                αποτελεσματικών
-                Διδακτικών Ομάδων.
-                Αυτά τα χαρακτηριστικά του ανθρώπινου δυναμικού της Κορυφής συμβάλλουν στη δημιουργία ενός
-                περιβάλλοντος
-                αμοιβαίας εμπιστοσύνης και άριστης επικοινωνίας μεταξύ διδασκόντων και μαθητών.
-            </li>
-        </ul>
+    </div>
+
+
     </div>
     <div class="faculty-text">
         <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
         <hr>
-        <p>
-            Στη Κορυφή, η συνεχής και άρτια εκπαίδευση του προσωπικού είναι βασική προτεραιότητα. Αυτή η συνεχής
-            επιμόρφωση
-            είναι απαραίτητη για να προσαρμόζονται γρήγορα και αποτελεσματικά στις συνεχείς εξελίξεις του
-            εκπαιδευτικού
-            τοπίου.
-        </p>
-        <p>Το προσωπικό της Κορυφής ξεχωρίζει για:</p>
-        <ul>
-            <li>
-                Το υψηλό επίπεδο επιστημονικής κατάρτισης, το οποίο συνεχώς αναβαθμίζεται και επεκτείνεται.
-            </li>
-            <br>
-            <li>
-                Την αρμονική συνεργασία μεταξύ εκπαιδευτικών διαφορετικών ηλικιακών ομάδων, που συνδυάζει την
-                εμπειρία
-                των
-                παλαιοτέρων με το πάθος των νεότερων για τη διδασκαλία.
-            </li>
-            <br>
-            <li>
-                Τη φιλοσοφία της συνεργασίας, που εκφράζεται μέσα από τη λειτουργία των καινοτόμων και ιδιαίτερα
-                αποτελεσματικών
-                Διδακτικών Ομάδων.
-                Αυτά τα χαρακτηριστικά του ανθρώπινου δυναμικού της Κορυφής συμβάλλουν στη δημιουργία ενός
-                περιβάλλοντος
-                αμοιβαίας εμπιστοσύνης και άριστης επικοινωνίας μεταξύ διδασκόντων και μαθητών.
-            </li>
-        </ul>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (4).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Φωτεινή Καπλάνη</p>
+                <p>Χρόνια Διδασκαλίας: 9</p>
+                <p>Σπουδή: Λογιστική</p>
+            </div>
+
+        </div>
+    </div>
+
+    </div>
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (5).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Χριστίνα Μπέλλου</p>
+                <p>Χρόνια Διδασκαλίας: 19</p>
+                <p>Σπουδή: Οικονομική Επιστήμη</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (6).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Ελευθερία Ράμψη</p>
+                <p>Χρόνια Διδασκαλίας: 5</p>
+                <p>Σπουδή: Φυσιολογία</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (7).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Κατερίνα Μάργκου</p>
+                <p>Χρόνια Διδασκαλίας: 6</p>
+                <p>Σπουδή: Μοριακή Βιολογία</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (8).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Ειρήνη Μαυροπούλου</p>
+                <p>Χρόνια Διδασκαλίας: 9</p>
+                <p>Σπουδή: Γενετική </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (9).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Παναγιώτα Δημάκου</p>
+                <p>Χρόνια Διδασκαλίας: 4</p>
+                <p>Σπουδή: Μαθηματικά</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (10).png" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Σπυρίδων Κότρας</p>
+                <p>Χρόνια Διδασκαλίας: 5</p>
+                <p>Σπουδή: Μαθηματικά</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (11).png" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Ιωάννα Παλαιού</p>
+                <p>Χρόνια Διδασκαλίας: 8</p>
+                <p>Σπουδή: Χρηματοοικονομικά</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (12).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Στέφανος Πούρος</p>
+                <p>Χρόνια Διδασκαλίας: 9</p>
+                <p>Σπουδή: Οικονομική Επιστήμη</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (13).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Θανάσης Στυλιανός</p>
+                <p>Χρόνια Διδασκαλίας: 7</p>
+                <p>Σπουδή: Οικονομικό Δίκαιο</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (14).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Αλέξανδρος Ευαγγελής</p>
+                <p>Χρόνια Διδασκαλίας: 4</p>
+                <p>Σπουδή: Οικονομική Επιστήμη</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (15).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Κοσμάς Καλύβης</p>
+                <p>Χρόνια Διδασκαλίας: 11</p>
+                <p>Σπουδή: Αναλυτική Χημεία</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (16).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Κωνσταντίνος Μπάρας</p>
+                <p>Χρόνια Διδασκαλίας: 13</p>
+                <p>Σπουδή: Μικροβιολογία</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="faculty-text">
+        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <hr>
+        <div class="teacher-div">
+            <img src="../images/teachers/teacher (17).jpg" class="teacher-img">
+            <div class="teacher-properties">
+                <p>Χρήστος Αντωνιάδης</p>
+                <p>Χρόνια Διδασκαλίας: 18</p>
+                <p>Σπουδή: Εξελικτική Βιολογία</p>
+            </div>
+
+        </div>
     </div>
 
 
