--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -13,13 +13,42 @@
 <body>
     <iframe src="./navbar.html" class="navbar" id="navbar_iframe"></iframe>
 
-    <div class="lesson-description-div" id="analitiki_ximeia">
-        <h3 class="lesson-description-head">Quiz</h3>
+    <div class="lesson-description-div" id="quiz_top">
+        <h3 class="lesson-description-head">Quiz ιστότοπου Κορυφής</h3>
+        <img src="../images/education_icon.png" id="quiz_icon">
         <hr>
-        <p>
-            who
-        </p>
+        <div id="quiz_introduction">
+            <p>
+                Για να δούμε πόσο καλά ξέρετε να περιηγείστε ιστότοπους!
+            </p>
+            <p>
+                Υποβάλτε όνομα για να ξεκινήσουμε!
+            </p>
+            <div id="name-input-div">
+                <input type="text" id="nameInput" placeholder="Το όνομα σου">
+                <button id="submit_button">Υπόβαλε</button>
+            </div>
+        </div>
+
+
     </div>
+
+    <div id="answers">
+        <div class="answer_div" id="answer0_div">
+            <a id="answer0">rqwr</a>
+        </div>
+        <div class="answer_div" id="answer1_div">
+            <a id="answer1">sdva</a>
+        </div>
+        <div class="answer_div" id="answer2_div">
+            <a id="answer2">qwefwq</a>
+        </div>
+        <div class="answer_div" id="answer3_div">
+            <a id="answer3">asdfqwef</a>
+        </div>
+    </div>
+    <button id="answer_correctness_button">Correct!</button>
+
 
     <iframe src="./footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
