--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -55,7 +55,7 @@
 
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Μαθηματική Ανάλυση </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (3).jpg" class="teacher-img">
@@ -71,7 +71,7 @@
 
     </div>
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Μαθηματική Ανάλυση </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (2).jpg" class="teacher-img">
@@ -85,7 +85,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Στοχαστική </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (1).jpg" class="teacher-img">
@@ -101,7 +101,7 @@
 
     </div>
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Λογιστική </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (4).jpg" class="teacher-img">
@@ -116,7 +116,7 @@
 
     </div>
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Οικονομική Επιστήμη</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (5).jpg" class="teacher-img">
@@ -130,7 +130,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Φυσιολογία </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (6).jpg" class="teacher-img">
@@ -144,7 +144,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Μοριακή Βιολογία </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (7).jpg" class="teacher-img">
@@ -158,7 +158,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Γενετική </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (8).jpg" class="teacher-img">
@@ -172,7 +172,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Μαθηματικά </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (9).jpg" class="teacher-img">
@@ -186,7 +186,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Μαθηματικά </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (10).png" class="teacher-img">
@@ -200,7 +200,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Χρηματοοικονομικά </h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (11).png" class="teacher-img">
@@ -214,7 +214,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Οικονομική Επιστήμη</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (12).jpg" class="teacher-img">
@@ -228,7 +228,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Οικονομικό Δίκαιο</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (13).jpg" class="teacher-img">
@@ -242,7 +242,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Οικονομική Επιστήμη</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (14).jpg" class="teacher-img">
@@ -256,7 +256,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Αναλυτική Χημεία</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (15).jpg" class="teacher-img">
@@ -270,7 +270,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Μικροβιολογία</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (16).jpg" class="teacher-img">
@@ -284,7 +284,7 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Εμπειρία, πάθος, ακαδημαϊκή αριστεία </h3>
+        <h3 class="faculty-head">Εξελικτική Βιολογία</h3>
         <hr>
         <div class="teacher-div">
             <img src="../images/teachers/teacher (17).jpg" class="teacher-img">
