--- a/pages/class_details.html
+++ b/pages/class_details.html
@@ -174,7 +174,7 @@
         <h3 class="lesson-description-head">Μοριακή Βιολογία</h3>
         <hr>
         <p>
-            ΤΣτη Μοριακή Βιολογία εξετάζουμε μοριακές δομές και λειτουργίες των κυττάρων. Οι φοιτητές
+            Στη Μοριακή Βιολογία εξετάζουμε μοριακές δομές και λειτουργίες των κυττάρων. Οι φοιτητές
             μαθαίνουν
             για τη δομή και τη λειτουργία των DNA, RNA και πρωτεϊνών, καθώς και για τις μηχανισμούς γονιδιακής έκφρασης
             και
