--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -52,12 +52,12 @@
 
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Μαθηματική Ανάλυση </h3>
+        <h3 class="faculty-head">Μαθηματική Ανάλυση</h3>
         <hr>
         <div class="teacher-div">
-            <img src="" class="teacher-img">
+            <img src="https://source.boomplaymusic.com/group10/M00/12/26/447f4ff733374924a1c15a96e6c62ec2H3000W3000_464_464.jpg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Ξανθή Συριοπούλου</p>
+                <p>Ένδο-κλειδομένος Εξωγήινος</p>
                 <p>Χρόνια Διδασκαλίας: 12</p>
                 <p>Σπουδή: Μαθηματική Ανάλυση</p>
             </div>
@@ -73,9 +73,9 @@
         <div class="teacher-div">
             <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Eminem_2021_Color_Corrected.jpg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Μιχαήλ Γιαννόπουλος</p>
+                <p>Έμινεμς Σοκολάτας</p>
                 <p>Χρόνια Διδασκαλίας: 11</p>
-                <p>Σπουδή: Μαθηματική Ανάλυση </p>
+                <p>Σπουδή: Μαθηματική Ανάλυση</p>
             </div>
 
         </div>
@@ -87,7 +87,7 @@
         <div class="teacher-div">
             <img src="https://i.scdn.co/image/ab67616d0000b273fb105ebe018b3fe6691e6adf" class="teacher-img">
             <div class="teacher-properties">
-                <p>Ελένη Ζήνωνα</p>
+                <p>Μη-Σοβαρός Παλιάτσος</p>
                 <p>Χρόνια Διδασκαλίας: 6</p>
                 <p>Σπουδή: Στοχαστική</p>
             </div>
@@ -103,7 +103,7 @@
         <div class="teacher-div">
             <img src="https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/04/62/e6/0462e6b9-45b0-f229-afc0-d2f79cce2cf4/artwork.jpg/1200x1200bf-60.jpg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Φωτεινή Καπλάνη</p>
+                <p>Ιωάννης Χοιρηνός</p>
                 <p>Χρόνια Διδασκαλίας: 9</p>
                 <p>Σπουδή: Λογιστική</p>
             </div>
@@ -116,9 +116,9 @@
         <h3 class="faculty-head">Οικονομική Επιστήμη</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (5).jpg" class="teacher-img">
+            <img src="https://a.espncdn.com/photo/2018/0917/r432464_1600x800cc.jpg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Χριστίνα Μπέλλου</p>
+                <p>Χαμηλός Κωνικός Ξεθωριαστής</p>
                 <p>Χρόνια Διδασκαλίας: 19</p>
                 <p>Σπουδή: Οικονομική Επιστήμη</p>
             </div>
@@ -127,12 +127,12 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Φυσιολογία </h3>
+        <h3 class="faculty-head">Φυσιολογία</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (6).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTETFWNxRW7sSMG-pB2Df1uP0kRPaymkVOJ9g&s" class="teacher-img">
             <div class="teacher-properties">
-                <p>Ελευθερία Ράμψη</p>
+                <p>Aιγύπτιος Eπενδυτής</p>
                 <p>Χρόνια Διδασκαλίας: 5</p>
                 <p>Σπουδή: Φυσιολογία</p>
             </div>
@@ -141,12 +141,12 @@
     </div>
 
     <div class="faculty-text">
-        <h3 class="faculty-head">Μοριακή Βιολογία </h3>
+        <h3 class="faculty-head">Μοριακή Βιολογία</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (7).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTv_Ssiyyq_Wk-mnUUx1-FJO5NAkhTeU5K-3YVdPFS17yI2UNKsNOQZUY1zpiuqmGVSd8vuuY2TaaMVawiXwC1MCg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Κατερίνα Μάργκου</p>
+                <p>Επενδυτής Λαδιού Μωρών</p>
                 <p>Χρόνια Διδασκαλίας: 6</p>
                 <p>Σπουδή: Μοριακή Βιολογία</p>
             </div>
@@ -158,9 +158,9 @@
         <h3 class="faculty-head">Γενετική </h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (8).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQY294SOQXNIQxwjAJe15oFBq7eiLnnwCEDOk1XmUOZzaFltX13_vU22aA-rVPo_j_pPGavRxkzgVehFT0Dumv-sw" class="teacher-img">
             <div class="teacher-properties">
-                <p>Ειρήνη Μαυροπούλου</p>
+                <p>Παρουσιάζω Κρέας</p>
                 <p>Χρόνια Διδασκαλίας: 9</p>
                 <p>Σπουδή: Γενετική </p>
             </div>
@@ -172,9 +172,9 @@
         <h3 class="faculty-head">Μαθηματικά </h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (9).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcS7H6Ku6Svr1OyDIu3HmDJ04WYiKBvH1rKTRP5GzWmhEEbIsR1rwIFKNH0alhqqbTSz0MRsD84OPGjuBtPQO0PDvASqneA4JcriU8JYjQ" class="teacher-img">
             <div class="teacher-properties">
-                <p>Παναγιώτα Δημάκου</p>
+                <p>Σε Μισώ 3000</p>
                 <p>Χρόνια Διδασκαλίας: 4</p>
                 <p>Σπουδή: Μαθηματικά</p>
             </div>
@@ -186,9 +186,9 @@
         <h3 class="faculty-head">Μαθηματικά </h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (10).png" class="teacher-img">
+            <img src="https://i.ytimg.com/vi/rHJ9T26nE8A/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBh8F_DcNV4uM_KXmOr18T9oXoaqw" class="teacher-img">
             <div class="teacher-properties">
-                <p>Σπυρίδων Κότρας</p>
+                <p>Κακή Στόχευση</p>
                 <p>Χρόνια Διδασκαλίας: 5</p>
                 <p>Σπουδή: Μαθηματικά</p>
             </div>
@@ -200,9 +200,9 @@
         <h3 class="faculty-head">Χρηματοοικονομικά </h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (11).png" class="teacher-img">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3zGQaWpL7Sdk3BjwmhiLnv3B_o9Sor8qfHA&s" class="teacher-img">
             <div class="teacher-properties">
-                <p>Ιωάννα Παλαιού</p>
+                <p>Ψωνιστής Aldi</p>
                 <p>Χρόνια Διδασκαλίας: 8</p>
                 <p>Σπουδή: Χρηματοοικονομικά</p>
             </div>
@@ -214,9 +214,9 @@
         <h3 class="faculty-head">Οικονομική Επιστήμη</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (12).jpg" class="teacher-img">
+            <img src="https://static.wikia.nocookie.net/thesquidgame/images/3/38/Seong_Gi-hun_2024.jpg/revision/latest?cb=20241227034936" class="teacher-img">
             <div class="teacher-properties">
-                <p>Στέφανος Πούρος</p>
+                <p>Έχω ξαναπαίξει αυτά τα παιχνίδια</p>
                 <p>Χρόνια Διδασκαλίας: 9</p>
                 <p>Σπουδή: Οικονομική Επιστήμη</p>
             </div>
@@ -228,9 +228,9 @@
         <h3 class="faculty-head">Οικονομικό Δίκαιο</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (13).jpg" class="teacher-img">
+            <img src="https://pbs.twimg.com/media/GWEDQAxXAAE85Jg.jpg" class="teacher-img">
             <div class="teacher-properties">
-                <p>Θανάσης Στυλιανός</p>
+                <p>χρυσό χρυσό χρυσό χρυσό χρυσό</p>
                 <p>Χρόνια Διδασκαλίας: 7</p>
                 <p>Σπουδή: Οικονομικό Δίκαιο</p>
             </div>
@@ -242,9 +242,9 @@
         <h3 class="faculty-head">Οικονομική Επιστήμη</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (14).jpg" class="teacher-img">
+            <img src="https://i.scdn.co/image/ab676161000051745c0b2129a88c7d6ed0704556" class="teacher-img">
             <div class="teacher-properties">
-                <p>Αλέξανδρος Ευαγγελής</p>
+                <p>Αντιπειρατείας</p>
                 <p>Χρόνια Διδασκαλίας: 4</p>
                 <p>Σπουδή: Οικονομική Επιστήμη</p>
             </div>
@@ -256,9 +256,9 @@
         <h3 class="faculty-head">Αναλυτική Χημεία</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (15).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcPS4OFBfHBTOrxcXzs4WxHHM5f_qgNujtSw&s" class="teacher-img">
             <div class="teacher-properties">
-                <p>Κοσμάς Καλύβης</p>
+                <p>Θωμάς Σέλμπι Σίγμα</p>
                 <p>Χρόνια Διδασκαλίας: 11</p>
                 <p>Σπουδή: Αναλυτική Χημεία</p>
             </div>
@@ -270,9 +270,9 @@
         <h3 class="faculty-head">Μικροβιολογία</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (16).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTpzFL-3vO0LKQPoHZ14-nZ9SfGua_OX3gvLa1ufzMZStt_WQYj5ZYqbGg3okVslPtbcQWOoOMMke9pmiJyMqqrRfwoM_GNxd1LIcqLQA" class="teacher-img">
             <div class="teacher-properties">
-                <p>Κωνσταντίνος Μπάρας</p>
+                <p>Αρχιεγκληματίας</p>
                 <p>Χρόνια Διδασκαλίας: 13</p>
                 <p>Σπουδή: Μικροβιολογία</p>
             </div>
@@ -284,9 +284,9 @@
         <h3 class="faculty-head">Εξελικτική Βιολογία</h3>
         <hr>
         <div class="teacher-div">
-            <img src="../images/teachers/teacher (17).jpg" class="teacher-img">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPMjNHtWC3z_cJVZtzoBZWyth7hgO91J4HxA&s" class="teacher-img">
             <div class="teacher-properties">
-                <p>Χρήστος Αντωνιάδης</p>
+                <p>Κίριου Κάζουμα (ποτέ δεν θα έβλαπτε κανέναν)</p>
                 <p>Χρόνια Διδασκαλίας: 18</p>
                 <p>Σπουδή: Εξελικτική Βιολογία</p>
             </div>
