--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ανθρώπινο Δυναμικό | Φροντιστήρια Κορυφή</title>
     <link rel="stylesheet" href="../styles/general.css">
-    <script defer="" src="../scripts/script.js"></script>
+    <script defer src="../scripts/script.js"></script>
     <link rel="icon" type="image/png" href="../images/icon.png">
 
 
 </head>
 
 <body>
-    <iframe src="./navbar.html" class="navbar" id="navbar_iframe" style="height: 89.9062px;"></iframe>
+    <iframe src="./navbar.html" class="navbar" id="navbar_iframe"></iframe>
 
     <div class="parallax"></div>
 
