i am noiw switch to firefox

--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -299,6 +299,6 @@
 
 
 
-    <iframe src="./footer.html" class="footer" id="footer_iframe" style="height: 89.7188px;"></iframe>
+    <iframe src="./footer.html" class="footer" id="footer_iframe"></iframe>
 
 </body></html>
